Initial no_solns commit

--- a/C_Y1/exercises1/exercise1.ipynb
+++ b/C_Y1/exercises1/exercise1.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:40f7f8f33dc17d3609ef77b87a8fee94295c6d1425f66c0fd76231a907a81897"
+  "signature": "sha256:9019cc4bc2a8abbe1942268a4ca3faa36e1777584bc465830eda840685ff90af"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -41,7 +41,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 0
     },
     {
      "cell_type": "heading",
@@ -65,13 +66,11 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "data = loadtxt('measurements.csv',delimiter=',')\n",
-      "data"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 0
     },
     {
      "cell_type": "markdown",
@@ -87,21 +86,11 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "figsize(20,15)\n",
-      "\n",
-      "hist(data[:,0], 200, range=(-4,10), alpha=0.5, label='data1')\n",
-      "hist(data[:,1], 200, range=(-4,10), alpha=0.5, label='data2')\n",
-      "hist(data[:,2], 200, range=(-4,10), alpha=0.5, label='data3')\n",
-      "hist(data[:,3], 200, range=(-4,10), alpha=0.5, label='data4')\n",
-      "hist(data[:,4], 200, range=(-4,10), alpha=0.5, label='data5')\n",
-      "\n",
-      "legend()\n",
-      "show()"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 0
     },
     {
      "cell_type": "markdown",
@@ -123,9 +112,7 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "mean(data, axis=0)"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
@@ -133,40 +120,7 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "std(data, ddof=1, axis=0)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "figsize(20,15)\n",
-      "\n",
-      "hist(data[:,0], 200, range=(-4,10), alpha=0.5, label='data1')\n",
-      "plot(array([mean(data[:,0]), mean(data[:,0])]), array([0,30000]), linestyle='--', color='black')\n",
-      "\n",
-      "##alternative way to plot vertical line\n",
-      "#axvline(x=mean(data[:,0]), ymin=0, ymax=3000, linestyle='--', color='black')\n",
-      "    \n",
-      "hist(data[:,1], 200, range=(-4,10), alpha=0.5, label='data2')\n",
-      "plot(array([mean(data[:,1]), mean(data[:,1])]), array([0,30000]), linestyle='--', color='black')\n",
-      " \n",
-      "hist(data[:,2], 200, range=(-4,10), alpha=0.5, label='data3')\n",
-      "plot(array([mean(data[:,2]), mean(data[:,2])]), array([0,30000]), linestyle='--', color='black')\n",
-      "\n",
-      "hist(data[:,3], 200, range=(-4,10), alpha=0.5, label='data4')\n",
-      "plot(array([mean(data[:,3]), mean(data[:,3])]), array([0,30000]), linestyle='--', color='black')\n",
-      "\n",
-      "hist(data[:,4], 200, range=(-4,10), alpha=0.5, label='data5')\n",
-      "plot(array([mean(data[:,4]), mean(data[:,4])]) ,array([0,30000]), linestyle='--', color='black')\n",
-      "\n",
-      "legend()\n",
-      "show()"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
@@ -187,14 +141,7 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "hist(data[:,0], 100, normed=True, range=(0,5), alpha=0.5,label='N=100000')\n",
-      "hist(data[:10000,0], 100, normed=True, range=(0,5), alpha=0.5,label='N=10000')\n",
-      "hist(data[:1000,0], 100, normed=True, range=(0,5), alpha=0.5,label='N=1000')\n",
-      "\n",
-      "legend()\n",
-      "show()"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
@@ -202,19 +149,7 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "array([mean(data[:1000,0]), mean(data[:10000,0]), mean(data[:,0])])"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "array([std(data[:1000,0],ddof=1), std(data[:10000,0],ddof=1), std(data[:,0],ddof=1)])"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
@@ -239,43 +174,7 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "N = array([1000,25000,50000,75000,100000])\n",
-      "\n",
-      "std_sample_1 = array([std(data[:1000,0],ddof=1),\n",
-      "                      std(data[:25000,0],ddof=1),\n",
-      "                      std(data[:50000,0],ddof=1),\n",
-      "                      std(data[:75000,0],ddof=1),\n",
-      "                      std(data[:,0],ddof=1)])\n",
-      "\n",
-      "ste_sample_1 = array([std(data[:1000,0],ddof=1)/sqrt(1000),\n",
-      "                      std(data[:25000,0],ddof=1)/sqrt(25000),\n",
-      "                      std(data[:50000,0],ddof=1)/sqrt(50000),\n",
-      "                      std(data[:75000,0],ddof=1)/sqrt(75000),\n",
-      "                      std(data[:,0],ddof=1)/sqrt(100000)])\n",
-      "\n",
-      "std_sample_4 = array([std(data[:1000,3],ddof=1),\n",
-      "                      std(data[:25000,3],ddof=1),\n",
-      "                      std(data[:50000,3],ddof=1),\n",
-      "                      std(data[:75000,3],ddof=1),\n",
-      "                      std(data[:,3],ddof=1)])\n",
-      "\n",
-      "ste_sample_4 = array([std(data[:1000,3],ddof=1)/sqrt(1000),\n",
-      "                      std(data[:25000,3],ddof=1)/sqrt(25000),\n",
-      "                      std(data[:50000,3],ddof=1)/sqrt(50000),\n",
-      "                      std(data[:75000,3],ddof=1)/sqrt(75000),\n",
-      "                      std(data[:,3],ddof=1)/sqrt(100000)])\n",
-      "\n",
-      "plot(N, std_sample_1, color='blue', linestyle='--', label=r'$s_x(data1)$')\n",
-      "plot(N, ste_sample_1, color='blue', label=r'$\\sigma_{\\bar{x}}(data1)$')\n",
-      "plot(N, std_sample_4, color='cyan', linestyle='--', label=r'$s_x(data4)$')\n",
-      "plot(N, ste_sample_4, color='cyan', label=r'$\\sigma_{\\bar{x}}(data4)$')\n",
-      "\n",
-      "xlabel('Sample Size')\n",
-      "yscale('log')\n",
-      "legend()\n",
-      "show()"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
@@ -290,88 +189,11 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "N = array([1000,25000,50000,75000,100000])\n",
-      "\n",
-      "plot(N, std_sample_1, color='blue', linestyle='--',label=r'$s_x(data1)$')\n",
-      "plot(N, ste_sample_1, color='blue', label=r'$\\sigma_{\\bar{x}}(data1)$')\n",
-      "plot(N, std_sample_4, color='cyan', linestyle='--',label=r'$s_x(data4)$')\n",
-      "plot(N, ste_sample_4, color='cyan', label=r'$\\sigma_{\\bar{x}}(data4)$')\n",
-      "\n",
-      "plot(array([0,100000]),\n",
-      "     array([std(data[:,3],ddof=1)/sqrt(100000),\n",
-      "            std(data[:,3],ddof=1)/sqrt(100000)]),\n",
-      "     color='red',linestyle=':')\n",
-      "\n",
-      "yscale('log')\n",
-      "legend()\n",
-      "show()"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "#takes a while to generate the statistics should probably do it once and write it out to a file\n",
-      "ms,stds,stes = [],[],[]\n",
-      "for d in [0,3]:\n",
-      "    instrument_ms   = array( [mean(data[:i,d]       )     for i in range(2, len(data))] )\n",
-      "    instrument_stds = array( [ std(data[:i,d],ddof=1)     for i in range(2, len(data))] )\n",
-      "    instrument_stes = array( [instrument_stds[i-2]/i**0.5 for i in range(2, len(data))] )\n",
-      "    \n",
-      "    ms.append(instrument_ms)\n",
-      "    stds.append(instrument_stds)\n",
-      "    stes.append(instrument_stes)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "desired_e = stes[1][-1]\n",
-      "sample_sizes = flatnonzero(stes[0] < desired_e)\n",
-      "no_samples_needed = sample_sizes[0]\n",
-      "no_samples_needed"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "from IPython.html.widgets import interact\n",
-      "\n",
-      "@interact(plt_range=[0,100000,1000])\n",
-      "def plot_function(plt_range=8000):\n",
-      "\n",
-      "    for i,d in enumerate([0,3]):\n",
-      "        plot(  ms[i], label='Instrument {} mean'.format(d+1))\n",
-      "        plot(stds[i], label='Instrument {} standard deviation'.format(d+1))\n",
-      "        plot(stes[i], label='Instrument {} standard error'.format(d+1))\n",
-      "        \n",
-      "        ##statistics start at a sample size of two\n",
-      "        #plot(N, stes[i][N-3], linestyle='', marker='o')\n",
-      "    \n",
-      "    axhline(y=desired_e, linestyle='--', color='black')\n",
-      "    plot([no_samples_needed]*2, [ylim()[0], desired_e],linestyle='--')\n",
-      "    \n",
-      "    xlabel('Sample Size')\n",
-      "    xlim([0,plt_range])\n",
-      "    yscale('log')\n",
-      "    legend()\n",
-      "    show()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 0
     },
     {
      "cell_type": "markdown",
@@ -422,17 +244,11 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "t,c = loadtxt('N2O5vst_65C.dat').T\n",
-      "\n",
-      "plot(t,c,marker='o', linestyle='')\n",
-      "xlabel('t/s')\n",
-      "ylabel('$[N_2 O_5]/mol.dm^{-3}$')\n",
-      "show()"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 0
     },
     {
      "cell_type": "markdown",
@@ -448,11 +264,7 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "def rate1(t,k,C0):\n",
-      "    \"Exponential function consistent with first order rate law.\"\n",
-      "    return C0*e**(-k*t)"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
@@ -460,10 +272,7 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "n2o5_fit = scipy.optimize.curve_fit(rate1, t, c, p0=[0.000001, 0.1])\n",
-      "n2o5_fit"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
@@ -471,26 +280,7 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "sqrt(n2o5_fit[1][0,0])"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "k=n2o5_fit[0][0]\n",
-      "C0=n2o5_fit[0][1]\n",
-      "\n",
-      "plot(t,c,marker='o',linestyle='none')\n",
-      "plot(t,rate1(t,k,C0),linestyle='--')\n",
-      "xlabel('t/s')\n",
-      "ylabel('$[N_2 O_5]/mol.dm^{-3}$')\n",
-      "show()"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
@@ -526,78 +316,29 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "ktemp=array([array([20,30,40,50,60,65])+273.15,\n",
-      "             array([0.0000188,0.0000694,0.000260,0.000888,0.00293,n2o5_fit[0][0]]),\n",
-      "             array([0.0000089,0.0000073,0.000023,0.000067,0.00021,sqrt(n2o5_fit[1][0,0])])])\n",
-      "ktemp"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 0
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "errorbar(ktemp[0],ktemp[1],yerr=ktemp[2],marker='o',linestyle='None')\n",
-      "xlabel('T/K')\n",
-      "ylabel('$k/s^{-1}$')\n",
-      "show()"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 0
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "def arrhenius(T,Ea,A):\n",
-      "    \"Exponential function taking parameters of Arrhenius form in SI units.\"\n",
-      "    R=8.3144621\n",
-      "    return A*e**(-Ea/(R*T))"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "arr_fit=scipy.optimize.curve_fit(arrhenius,ktemp[0],ktemp[1],sigma=ktemp[2],p0=[8e4,1e10])\n",
-      "arr_fit"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "sqrt(diag(arr_fit[1]))"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "T=linspace(290,340,50)\n",
-      "\n",
-      "errorbar(ktemp[0],ktemp[1],yerr=ktemp[2],marker='o',linestyle='None')\n",
-      "plot(T,arrhenius(T,arr_fit[0][0],arr_fit[0][1]),linestyle='--')\n",
-      "xlabel('T/K')\n",
-      "ylabel('$k/s^{-1}$')\n",
-      "show()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 0
     },
     {
      "cell_type": "markdown",
@@ -620,10 +361,7 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "klinfit_nerr=polyfit((1/ktemp[0]),log(ktemp[1]),1,cov=True)\n",
-      "klinfit_nerr"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
@@ -631,15 +369,15 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "klinfit_nerr_line=klinfit_nerr[0][1]+klinfit_nerr[0][0]*(1/ktemp[0])\n",
-      "\n",
-      "plot((1/ktemp[0]),log(ktemp[1]),marker='o',linestyle='None')\n",
-      "plot((1/ktemp[0]),klinfit_nerr_line,linestyle='--')\n",
-      "xlabel('1/T /K')\n",
-      "ylabel(r'$\\ln(k) /\\ln(s^{-1})$')\n",
-      "show()"
-     ],
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
@@ -660,26 +398,7 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "klinfit_err=polyfit((1/ktemp[0]),log(ktemp[1]),1,w=1/(ktemp[2]/ktemp[1])**2,cov=True)\n",
-      "klinfit_err"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "klinfit_err_line=klinfit_err[0][1]+klinfit_err[0][0]*(1/ktemp[0])\n",
-      "\n",
-      "errorbar((1/ktemp[0]),log(ktemp[1]),yerr=(ktemp[2]/ktemp[1]),marker='o',linestyle='None')\n",
-      "plot((1/ktemp[0]),klinfit_err_line,linestyle='--')\n",
-      "xlabel('1/T /K')\n",
-      "ylabel(r'$ln(k) /ln(s^{-1})$')\n",
-      "show()"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
