--- a/C_Y1/exercises2/exercise2.ipynb
+++ b/C_Y1/exercises2/exercise2.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:4893809769254bd910d4a1e5591dc18ad404c5e2c099dac99f6a25c736cc6f57"
+  "signature": "sha256:4ba98692fa8b09eff19cb1804a542d1c94fe65c390a5d74dac7dd68a7bd762d3"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -31,19 +31,11 @@
      "source": [
       "For this problem set, instead of solving the exercises on this notebook, create a new separate notebook for your answers (you can do this from the *dashboard* - the browser window you launched this notebook from). Choose appropriate headings, and give your answers by providing the code cells and outputs, as well as commenting on markdown cells.\n",
       "\n",
-      "Don't forget to load *pylab* and import the *scipy* modules needed."
+      "Don't forget to load *pylab* and import the *scipy* modules needed.\n",
+      "\n",
+      "    %pylab inline\n",
+      "    import scipy.optimize"
      ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "%pylab inline\n",
-      "import scipy.optimize"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
     },
     {
      "cell_type": "heading",
@@ -62,38 +54,6 @@
       "* In one figure plot the full chromatogram\n",
       "* In a second figure create a plot zoomed in on the largest peak (this peak marks the point when glycine reached the mass spectrometer)."
      ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "chrom_ion126=loadtxt('chromatogram_ion126.dat')\n",
-      "time = chrom_ion126[:,0]\n",
-      "intensity = chrom_ion126[:,1]\n",
-      "figsize(15,10)\n",
-      "plot(time, intensity)\n",
-      "xlabel('Time /min')\n",
-      "ylabel('Intensity /counts min-1')\n",
-      "show()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "figsize(15,10)\n",
-      "plot(time, intensity,marker='o')\n",
-      "xlabel('Time /min')\n",
-      "ylabel('Intensity /counts min-1')\n",
-      "xlim([42,46])\n",
-      "show()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -142,47 +102,11 @@
      "outputs": []
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "gly_params, gly_mcov=scipy.optimize.curve_fit(gly_intensity, time, intensity, p0=[1,1,43])\n",
-      "predicted_intensity = gly_intensity(time, *gly_params)\n",
-      "\n",
-      "figsize(15,10)\n",
-      "plot(time, intensity)\n",
-      "plot(time ,predicted_intensity, linestyle='--', linewidth=5)\n",
-      "xlabel('Time /min')\n",
-      "ylabel('Intensity /counts min-1')\n",
-      "xlim([42,46])\n",
-      "show()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
       "* Plot and comment on the residuals of your fitted curve. Do you have any ideas for an improved fitting function you would like to try?"
      ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "residuals = predicted_intensity - intensity\n",
-      "\n",
-      "figsize(15,10)\n",
-      "plot(time, residuals)\n",
-      "xlabel('Time /min')\n",
-      "ylabel('Delta I/counts min-1')\n",
-      "xlim([42,46])\n",
-      "show()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -219,113 +143,6 @@
      ]
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "def dgauss(x,d,a,s):\n",
-      "    \"2 gaussian curves separated by distance d\"\n",
-      "    return a*(e**(-(x+d/2)**2/(2*s**2))+e**(-(x-d/2)**2/(2*s**2)))"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "X = linspace(10,-10, 200)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "#inter peak distance\n",
-      "d,a,s = 1,1,1\n",
-      "for d in range(10):\n",
-      "    plot(X, dgauss(X,d,a,s), label='d:{} a:{} s:{}'.format(d,a,s))\n",
-      "legend()\n",
-      "show()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "#peak(s) height\n",
-      "d,a,s = 1,1,1\n",
-      "for a in range(10):\n",
-      "    plot(X, dgauss(X,d,a,s), label='d:{} a:{} s:{}'.format(d,a,s))\n",
-      "legend()\n",
-      "show()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "#peak(s) breadth\n",
-      "d,a,s = 1,1,1\n",
-      "for s in range(10):\n",
-      "    plot(X, dgauss(X,d,a,s), label='d:{} a:{} s:{}'.format(d,a,s))\n",
-      "legend()\n",
-      "show()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "from mpl_toolkits.mplot3d import Axes3D\n",
-      "\n",
-      "mesh = meshgrid(linspace(-10,10,80),linspace(0,10,40))\n",
-      "xm=mesh[0]\n",
-      "dm=mesh[1]\n",
-      "z=dgauss(xm, dm, 1, 1)\n",
-      "\n",
-      "imshow(z)\n",
-      "xlabel('x')\n",
-      "ylabel('d')\n",
-      "show()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "mesh = meshgrid(linspace(-10,10,80),linspace(0,10,40))\n",
-      "xm=mesh[0]\n",
-      "dm=mesh[1]\n",
-      "z=dgauss(xm,dm,1,1)\n",
-      "\n",
-      "fancy=gca(projection='3d')\n",
-      "fancy.plot_surface(xm, dm, z, rstride=1, cstride=1, cmap=cm.RdBu)\n",
-      "fancy.view_init(20,90)\n",
-      "xlabel('x')\n",
-      "ylabel('d')\n",
-      "show()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
      "cell_type": "heading",
      "level": 2,
      "metadata": {},
@@ -345,22 +162,6 @@
      ]
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "spectrum = loadtxt('anthracene_fluo.dat')\n",
-      "wavelength = spectrum[:,0]\n",
-      "intensity = spectrum[:,1]\n",
-      "plot(wavelength, intensity)\n",
-      "xlabel(r'$\\lambda/mn$')\n",
-      "ylabel(r'$I_r/au$') #arbitrary units is not very pedagogical!\n",
-      "show()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
@@ -372,112 +173,6 @@
      ]
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "def gauss(x, x0, a, s):\n",
-      "    \"Gaussian curve\"\n",
-      "    return a*e**(-(x-x0)**2/(2*s**2))"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "def spectralfit(x, x1, a1, s1, x2, a2, s2, x3, a3, s3, x4, a4, s4, x5, a5, s5, x6, a6, s6):\n",
-      "    \"Fitting function as a sum of gaussians\"\n",
-      "    intensity = gauss(x,x1,a1,s1) + \\\n",
-      "                gauss(x,x2,a2,s2) + \\\n",
-      "                gauss(x,x3,a3,s3) + \\\n",
-      "                gauss(x,x4,a4,s4) + \\\n",
-      "                gauss(x,x5,a5,s5) + \\\n",
-      "                gauss(x,x6,a6,s6)\n",
-      "    \n",
-      "    return intensity"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "initial_guess = [340,5e5,1,\n",
-      "                 380,5e5,1,\n",
-      "                 400,5e5,1,\n",
-      "                 425,5e5,1,\n",
-      "                 450,2e5,1,\n",
-      "                 475,1e5,1]\n",
-      "\n",
-      "spec_fit_out = scipy.optimize.curve_fit(spectralfit, wavelength, intensity, p0=initial_guess)\n",
-      "spec_fit_params = spec_fit_out[0]"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "##the most extensible way to do this\n",
-      "#def spectralfit(x, *master_gauss_params):\n",
-      "#    \"Fitting function as a sum of gaussians\"\n",
-      "#    master_gauss_params = array(master_gauss_params).reshape(len(master_gauss_params)/3, 3)\n",
-      "#    intensity = 0\n",
-      "#    \n",
-      "#    for gauss_params in master_gauss_params:\n",
-      "#        intensity += gauss(x, *gauss_params)    \n",
-      "#\n",
-      "#    return intensity\n",
-      "#\n",
-      "#spec_fit_out = scipy.optimize.curve_fit(spectralfit, wavelength, intensity, p0=[340,5e5,1,\n",
-      "#                                                                                380,5e5,1,\n",
-      "#                                                                                400,5e5,1,\n",
-      "#                                                                                425,5e5,1,\n",
-      "#                                                                                450,2e5,1,\n",
-      "#                                                                                475,1e5,1])"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "spec_fit_params"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "plot(wavelength, intensity)\n",
-      "plot(wavelength, spectralfit(x, *spec_fit_params), linestyle='--') #special feature to avoid typing too much\n",
-      "plot(wavelength, gauss(wavelength, *spec_fit_params[0:3]), linestyle=':')\n",
-      "plot(wavelength, gauss(wavelength, *spec_fit_params[3:6]), linestyle=':')\n",
-      "plot(wavelength, gauss(wavelength, *spec_fit_params[6:9]), linestyle=':')\n",
-      "plot(wavelength, gauss(wavelength, *spec_fit_params[9:12]), linestyle=':')\n",
-      "plot(wavelength, gauss(wavelength, *spec_fit_params[12:15]), linestyle=':')\n",
-      "plot(wavelength, gauss(wavelength, *spec_fit_params[15:18]), linestyle=':')\n",
-      "\n",
-      "xlabel(r'$\\lambda/mn$')\n",
-      "ylabel(r'$I_r/au$')\n",
-      "show()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
@@ -487,19 +182,6 @@
       "\n",
       "The results you have obtained relate to the vibration of the molecule -you will learn much more about this phenomena later on during the degree."
      ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "#looks linear\n",
-      "vibronic_wavelengths = spec_fit_params[3:15:3]\n",
-      "plot(vibronic_wavelengths, linestyle='None', marker='o')\n",
-      "show()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
     },
     {
      "cell_type": "heading",
@@ -517,14 +199,6 @@
       "\n",
       "Now that you are capturing both sets of vibronic progressions you can now produce two plots of the wavelengths vs. an integer index for the two progressions."
      ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
     }
    ],
    "metadata": {}
