--- a/C_Y1/workshop1/Workshop 1.ipynb
+++ b/C_Y1/workshop1/Workshop 1.ipynb
@@ -10,7 +10,7 @@
    "name": "python2"
   },
   "name": "",
-  "signature": "sha256:390a5c6e0513636f81ee5bd79b762592e155c73617afc60304fa0d0da9d71c30"
+  "signature": "sha256:10c9670308882fc0a3a43da9cbdb4e73866c02e4f916dda2167870bea59b660e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -486,12 +486,11 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "%pylab inline"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 17
     },
     {
      "cell_type": "markdown",
@@ -1320,16 +1319,7 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "X = linspace(-pi, pi, 128)\n",
-      "C = cos(X)\n",
-      "S = sin(X)\n",
-      "\n",
-      "plot(X,C)\n",
-      "plot(X,S)\n",
-      "\n",
-      "show()"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
@@ -1804,13 +1794,11 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "x = array([0, 1, 2, 3, 4, 5, 6, 7])\n",
-      "y = array([ 4, 11, 6, 5, -4, 3.5, 7, 9.1])"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 17
     },
     {
      "cell_type": "markdown",
@@ -1826,14 +1814,11 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "width = 1/1.5\n",
-      "bar(x, y, width)\n",
-      "show()"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 17
     },
     {
      "cell_type": "markdown",
@@ -1855,19 +1840,11 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "labels = ['data1','data2','data3','data4','data5','data6','data7','data8']\n",
-      "width = 1\n",
-      "\n",
-      "xticks(x + width/2.0, labels )\n",
-      "ylabel('Intensity')\n",
-      "\n",
-      "bar(x, y, width, color=\"cyan\")\n",
-      "show()"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 17
     },
     {
      "cell_type": "heading",
@@ -1897,19 +1874,11 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "data = array([1, 1, 1, 3, 2, 5, 1, 10, 10, 8])\n",
-      "\n",
-      "hist(data, bins=12, color=\"magenta\")\n",
-      "xlabel('bins')\n",
-      "ylabel('count')\n",
-      "\n",
-      "xlim(0,12)\n",
-      "show()"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 17
     },
     {
      "cell_type": "markdown",
@@ -2000,18 +1969,14 @@
      "collapsed": false,
      "input": [
       "L=10\n",
-      "\n",
       "X = linspace(0,L,1000)\n",
       "\n",
-      "xlim(0,1000)\n",
-      "ylim(0,12)\n",
-      "\n",
       "plot(sin(1*pi*X/L), label='n=1')\n",
-      "plot(sin(2*pi*X/L)+2, label='n=2')\n",
-      "plot(sin(3*pi*X/L)+4, label='n=3')\n",
-      "plot(sin(4*pi*X/L)+7, label='n=4')\n",
+      "plot(sin(2*pi*X/L), label='n=2')\n",
+      "plot(sin(3*pi*X/L), label='n=3')\n",
+      "plot(sin(4*pi*X/L), label='n=4')\n",
       "\n",
-      "legend(loc='upper right')\n",
+      "legend(loc='lower left')\n",
       "show()"
      ],
      "language": "python",
@@ -2088,78 +2053,10 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "D=1\n",
-      "a=1\n",
-      "re=1\n",
-      "\n",
-      "X = linspace(0,4,100)\n",
-      "morse = D*(1-e**(-a*(X-re)))**2\n",
-      "harmonic=(a**2)*D*(X-re)**2\n",
-      "div_harmonic = harmonic*(2*X-2*re)\n",
-      "\n",
-      "figure(figsize=(12,8))\n",
-      "#plot(X, morse, label=r'$V_m (r)$')\n",
-      "plot(X, harmonic, color='blue',label=r'$V_h (r)$')\n",
-      "plot(X, -div_harmonic, color='green',label=r'$F_h (r)$')\n",
-      "legend()\n",
-      "title('D=1, a=1, re=1')\n",
-      "\n",
-      "xlabel('r')\n",
-      "ylim(-1.5,1.5)\n",
-      "\n",
-      "ax = gca()\n",
-      "#make the right spine invisible\n",
-      "ax.spines['right'].set_color('none')\n",
-      "#make the top spine invisible\n",
-      "ax.spines['top'].set_color('none')\n",
-      "#move the bottom spine to the centre\n",
-      "ax.spines['bottom'].set_position('zero')\n",
-      "#move the left spine to the centre\n",
-      "ax.spines['left'].set_position('zero')\n",
-      "show()"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 2
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "D=1\n",
-      "a=1\n",
-      "re=1\n",
-      "\n",
-      "X = linspace(0,4,100)\n",
-      "morse = D*(1-e**(-a*(X-re)))**2\n",
-      "div_morse = 2 * (1-e**(-a*(X-re))) * a*e**(-a*(X-re)) \n",
-      "\n",
-      "figure(figsize=(12,8))\n",
-      "plot(X, morse, label=r'$V_m (r)$')\n",
-      "plot(X, -div_morse, color='green',label=r'$F_h (r)$')\n",
-      "legend()\n",
-      "title('D=1, a=1, re=1')\n",
-      "\n",
-      "xlabel('r')\n",
-      "ylim(-1.5,1.5)\n",
-      "\n",
-      "ax = gca()\n",
-      "#make the right spine invisible\n",
-      "ax.spines['right'].set_color('none')\n",
-      "#make the top spine invisible\n",
-      "ax.spines['top'].set_color('none')\n",
-      "#move the bottom spine to the centre\n",
-      "ax.spines['bottom'].set_position('zero')\n",
-      "#move the left spine to the centre\n",
-      "ax.spines['left'].set_position('zero')\n",
-      "show()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 2
+     "outputs": []
     },
     {
      "cell_type": "heading",
@@ -2194,13 +2091,7 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "figure(figsize=(12,8))\n",
-      "plot(x[::3],y[::3],linestyle='None',marker='^',alpha=0.7,color='red')\n",
-      "plot(x[1::3],y[1::3],linestyle='None',marker='^',alpha=0.7,color='blue')\n",
-      "plot(x[2::3],y[2::3],linestyle='None',marker='^',alpha=0.7,color='green')\n",
-      "show()"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
@@ -2208,33 +2099,7 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "plot(x[:points/3],y[:points/3],linestyle='None',marker=7,alpha=0.5,color='red')\n",
-      "\n",
-      "plot(x[points/3:2*points/3],y[points/3:2*points/3],linestyle='None',marker=7,alpha=0.5,color='blue')\n",
-      "\n",
-      "plot(x[2*points/3:points],y[2*points/3:points],linestyle='None',marker=7,alpha=0.5,color='green')\n",
-      "\n",
-      "\n",
-      "show()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "plot(x[:30],y[:30],linestyle='None',marker=7,alpha=0.5,color='red')\n",
-      "\n",
-      "plot(x[30:60],y[30:60],linestyle='None',marker=7,alpha=0.5,color='blue')\n",
-      "\n",
-      "plot(x[60:90],y[60:90],linestyle='None',marker=7,alpha=0.5,color='green')\n",
-      "\n",
-      "\n",
-      "show()"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
