--- a/C_Y1/workshop2/Workshop 2.ipynb
+++ b/C_Y1/workshop2/Workshop 2.ipynb
@@ -10,7 +10,7 @@
    "name": "python3"
   },
   "name": "",
-  "signature": "sha256:f94a198d1089a70b684a9b598b09a9f99d8110acf6d5826f5c52b405656ee676"
+  "signature": "sha256:9a071e39a856c1f0bfa2e4cc0412c477581d95edebe4d1d848c38b7d3fb5e4a7"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1875,14 +1875,11 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "data=loadtxt('zn_flame.txt')\n",
-      "conc_data = data[:,0]\n",
-      "abs_data = data[:, 1:]"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 0
     },
     {
      "cell_type": "markdown",
@@ -1894,15 +1891,11 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "mean_abs = mean(abs_data, axis=1)\n",
-      "\n",
-      "plot(conc_data, mean_abs, linestyle='', marker='o')\n",
-      "show()"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 0
     },
     {
      "cell_type": "markdown",
@@ -1914,15 +1907,11 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "std_e = std(abs_data, ddof=1, axis=1)/len(data)**0.5\n",
-      "\n",
-      "errorbar(conc_data, mean_abs, yerr=std_e, linestyle='')\n",
-      "show()"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 0
     },
     {
      "cell_type": "markdown",
@@ -1934,17 +1923,11 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "m,c = polyfit(conc_data, mean_abs, 1, w=1/std_e**2)\n",
-      "predicted_abs_data = conc_data*m+c\n",
-      "\n",
-      "plot(conc_data, predicted_abs_data, linestyle='--')\n",
-      "plot(conc_data, mean_abs, linestyle='', marker='o')\n",
-      "show()"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 0
     },
     {
      "cell_type": "markdown",
@@ -1958,14 +1941,11 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "residuals = predicted_abs_data - mean_abs\n",
-      "errorbar(conc_data, residuals, linestyle='', marker='o', yerr=std_e)\n",
-      "show()"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 0
     },
     {
      "cell_type": "markdown",
@@ -1977,12 +1957,11 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "(0.119-c)/m"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 0
     },
     {
      "cell_type": "heading",
@@ -2011,30 +1990,11 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "%pylab inline"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "data = loadtxt('interesting_data.txt')\n",
-      "lemons = data[:,0]\n",
-      "fatalities = data[:,1]\n",
-      "\n",
-      "p,cov=polyfit(lemons,fatalities,1,cov=True)\n",
-      "m,c=p\n",
-      "plot(lemons, fatalities, linestyle='', marker='o')\n",
-      "plot(lemons, lemons*m+c,linestyle='--')\n",
-      "show()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 0
     },
     {
      "cell_type": "markdown",
@@ -2050,14 +2010,6 @@
      "source": [
       "Look at the uncertainty reported for the coefficients and comment on the nature of relationship between the two variables - do you think our linear model is a good fit for the data?"
      ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
     }
    ],
    "metadata": {}
