--- a/C_Y1/workshop3/Workshop 3.ipynb
+++ b/C_Y1/workshop3/Workshop 3.ipynb
@@ -10,7 +10,7 @@
    "name": "python3"
   },
   "name": "",
-  "signature": "sha256:104f8b01f95702614129489940ede87dbcfb02e09e3e50f07d79b31d47344abb"
+  "signature": "sha256:dff1b5b3999e9c5af66128ba6bc2aa0b06f0c9d956d5bddfee1f216c96193626"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1423,6 +1423,14 @@
      "level": 2,
      "metadata": {},
      "source": [
+      "Exercises"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
       "Exercise 1"
      ]
     },
@@ -1436,13 +1444,11 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "from leps import get_energy\n",
-      "get_energy(1,1)"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 0
     },
     {
      "cell_type": "markdown",
@@ -1456,21 +1462,11 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "x,y = linspace(0.35,4,100),linspace(0.35,4,100)\n",
-      "X,Y = meshgrid(x,y)\n",
-      "Z = get_energy(X,Y)\n",
-      "\n",
-      "figure(figsize=[12,8])\n",
-      "ax = gca(projection='3d')\n",
-      "ax.plot_surface(X, Y, Z, rstride=3, cstride=3, cmap=cm.coolwarm)\n",
-      "ax.set_zlim(-5,1)\n",
-      "ax.view_init(0,20)\n",
-      "show()"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 0
     },
     {
      "cell_type": "markdown",
@@ -1482,24 +1478,11 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "from IPython.html.widgets import interact\n",
-      "@interact(theta=[0,90,5], phi=[0,180,5])\n",
-      "def show_fig(theta=0, phi=0):\n",
-      "    x,y = linspace(0.35,4,100),linspace(0.35,4,100)\n",
-      "    X,Y = meshgrid(x,y)\n",
-      "    Z= get_energy(X,Y)\n",
-      "\n",
-      "    fig = figure(figsize=[12,8])\n",
-      "    ax = Axes3D(fig)\n",
-      "    ax.plot_surface(X, Y, Z, rstride=3, cstride=3, cmap=cm.coolwarm)\n",
-      "    ax.set_zlim(-5,1)\n",
-      "    ax.view_init(theta,phi)\n",
-      "    fig.show()"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 0
     },
     {
      "cell_type": "heading",
